<resources>
    <string name="app_name">Mozilla Stumbler</string>
    <string name="action_about">About Mozilla Stumbler</string>
    <string name="action_preferences">Settings</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="service_name">Mozilla Stumbler</string>
    <string name="notification_scanning">%1$s is scanning</string>
    <string name="notification_paused">%1$s is paused</string>
    <string name="enter_nickname">Enter Nickname (optional)</string>
    <string name="enter_nickname_title">Nickname: %1$s</string>
    <string name="enter_nickname_longtext">Your nickname will appear on the leaderboard.</string>
    <string name="update_title">Download Mozilla Stumbler Update?</string>
    <string name="update_message">Installed version: %1$s\nLatest version: %2$s</string>
    <string name="update_now">Update Now</string>
    <string name="update_later">Update Later</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_openstreetmap">Map view tiles\n© OpenStreetMap contributors\nhttp://www.openstreetmap.org</string>
    <string name="about_mapbox_title">MapBox</string>
    <string name="about_mapbox">Learn more at http://www.mapbox.com</string>
    <string name="about_legal_aosp">Some iconography in this app is reproduced from work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.</string>
    <string name="about_legal_flaticons">GPS, cell tower, Wi-Fi, and binoculars icons made by Freepik from http://www.flaticon.com under license: https://creativecommons.org/licenses/by-nd/3.0</string>
    <string name="upload_observations_sent_title">Already sent</string>
    <string name="metrics_observations_last_upload_time_title">Last upload:</string>
    <string name="metrics_observations_last_upload_time_never">never</string>
    <plurals name="time_diff_seconds">
        <item quantity="one">just now</item>
        <item quantity="other">moments ago</item>
    </plurals>
    <plurals name="time_diff_minutes">
        <item quantity="one">one minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="time_diff_hours">
        <item quantity="one">one hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="time_diff_days">
        <item quantity="one">one day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <string name="metrics_notification_text">Reports:%1$d Cells:%2$d Wi-Fis:%3$d</string>
    <string name="metrics_notification_extraline">Last upload: %1$s</string>
    <string name="metrics_observations_title">Reports:</string>
    <string name="metrics_observations_wifis_title">Wi-Fi networks:</string>
    <string name="metrics_observations_cell_towers_title">Cell networks:</string>
    <string name="upload_observations_in_queue_title">Ready to send</string>
    <string name="upload_wifi_only_title">Auto-upload only on Wi-Fi</string>
    <string name="upload_wifi_only_summary">This option will reduce your data usage over the cellular network. Pressing the upload button in Metrics will always upload.</string>
    <string name="metrics_activity_title">Metrics</string>
    <string name="metrics_this_session">Current session</string>
    <string name="drawer_map_option_show_mls_locations">Show MLS locations</string>
    <string name="title_activity_log">Log</string>
    <string name="action_file_bug">File a Bug</string>
    <string name="file_bug_sender_name">Your Name:</string>
    <string name="file_bug_sender_name_hint">Optional</string>
    <string name="file_bug_sender_email">Your Email:</string>
    <string name="file_bug_sender_email_hint">Email is required</string>
    <string name="file_bug_name">Bug Title:</string>
    <string name="file_bug_name_hint">Descriptive title for the bug</string>
    <string name="file_bug_description">Bug Description:</string>
    <string name="file_bug_description_hint">Detailed information about the bug being reported (what happens, when it happens, etc.)</string>
    <string name="file_bug_reproduction">Bug Reproduction:</string>
    <string name="file_bug_reproduction_hint">Steps explaining how to reproduce the bug.</string>
    <string name="file_bug_report_info">By sending this report, you will also send information regarding the current state of your device. This information will be used to narrow down the cause of the bug. Bug reports for bugs that result in a crash are sent automatically if the option \"%1$s\" is enabled. If you encounter bugs that do not result in a crash, please report them through this form.</string>
    <string name="file_bug_send">Send Bug Report</string>
    <string name="file_bug_type">Bug Type:</string>
    <string-array name="file_bug_type_list">
        <item>Cosmetic</item>
        <item>Performance</item>
        <item>Compatibility</item>
        <item>Functionality</item>
        <item>Feature Request</item>
        <item>Other</item>
    </string-array>
    <string name="file_bug_toast_success">Bug Report Sent\n Thank you!</string>
    <string name="file_bug_missing_field">This field is required!</string>
    <string name="action_view_log">View Log</string>
    <string name="scroll_to_start">Scroll to Top</string>
    <string name="scroll_to_end">Scroll to End</string>
    <string name="kml_file_title">KML Reports File</string>
    <string name="kml_file_load">Load KML File</string>
    <string name="kml_file_save">Save KML File</string>
    <string name="kml_file_description">Save/Load the reports (location, Wi-Fi + cell counts, track segment) for debugging.</string>
    <string name="kml_file_saved_name">Saved File:</string>
    <string name="loading_kml">Loading KML</string>
    <string name="saving_kml">Saving KML</string>
    <string name="mozstumbler_kml_file">Mozilla Stumbler KML file</string>
    <string name="kml_file_saved">KML Saved</string>
    <string name="share_after_kml_saved">The file is saved on device, would you like to share the file?</string>
    <string name="gpx_file_title">GPX Track File</string>
    <string name="gpx_file_save">Save GPX File</string>
    <string name="gpx_file_list">List GPX Files</string>
    <string name="gpx_file_description">Save the locations as GPX track file.</string>
    <string name="gpx_file_saved_name">Saved File:</string>
    <string name="saving_gpx">Saving GPX to %1$s</string>
    <string name="mozstumbler_gpx_file">Mozilla Stumbler GPX file</string>
    <string name="gpx_file_saved">GPX Saved</string>
    <string name="share_after_gpx_saved">The file is saved on device, would you like to share the file?</string>
    <string name="keep_screen_on_title">Keep screen on while scanning</string>
    <string name="keep_screen_on_summary">Keep the screen on while scanning is active and the app is in the foreground.</string>
    <string name="delete_all">Delete all</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="select_file">Select file</string>
    <string name="share_file">Share file</string>
    <string name="load_file">Load file</string>
    <string name="delete_file">Delete file</string>
    <string name="drawer_open">Show drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="drawer_map_layers_title">Map Legend</string>
    <string name="first_run_message_part1">Mozilla Location Service is an open service for locating devices using Wi-Fi and cell networks.</string>
    <string name="first_run_message_part2">Read our <a href="https://location.services.mozilla.com/privacy">privacy policy</a> and then start stumbling to begin contributing your current location.</string>
    <string name="first_run_start_stumbling">Start Stumbling</string>
    <string name="first_run_welcome_to_mozstumbler">Welcome to Mozilla Stumbler</string>
    <string name="map_unavailable">The map is not available for display, as there is no SD card storage.\nYou can still collect data.</string>
    <string name="map_offline_mode">The map will not update without an Internet connection,\nhowever you are still able to collect data.</string>
    <string name="map_copyright_fdroid">Tiles Courtesy of MapQuest\n© OpenStreetMap contributors</string>
    <string name="map_copyright_moz">© MapBox © OpenStreetMap contributors</string>
    <string name="action_developer">Developer</string>
    <string name="developer_title">Developer</string>
    <string name="enable_option_show_mls_on_map">Enable MLS location queries</string>
    <string name="enable_option_show_mls_on_map_summary">Retrieve and show the Mozilla Location Service (MLS) estimated location for each report.</string>
    <string name="enable_option_show_mls_on_map_detailed_info">At the cost of a bit more memory and network usage, the MLS location is shown for each report - i.e. your estimated location based on already stumbled data.\nThis is shown as a red dot with a line to its report. The closer it is to your actual GPS location, the more reliable and precise the Mozilla Location Service is. More stumbling in the area will improve this.\nHowever, it will not query locations over mobile data connections if \"%1$s\" is enabled.</string>
    <string name="enable_offline_geo">Enable Offline location queries</string>
    <string name="cell_plus_wifi_observation">Wi-Fi + cell report</string>
    <string name="cell_only_observation">Cell only report</string>
    <string name="wifi_only_observation">Wi-Fi only report</string>
    <string name="mls_location_observation">MLS location</string>
    <string name="low_resolution_map">Low detail map</string>
    <string name="map_turned_off">Map display off</string>
    <string name="map_tile_resolution_options_label">Map detail:</string>
    <string name="map_tile_resolution_options_label_dynamic">Map detail: %1$s</string>
    <string name="map_tile_resolution_options_summary">Low detail reduces network data usage.</string>
    <string name="enable_crash_reporting">Enable crash reporting</string>
    <string name="enable_simulation">Enable Simulation</string>
    <string name="clear_simulation_start_location">Clear simulation start location</string>
    <string name="privacy_policy">Privacy policy:</string>
    <string name="satellites_separator">/</string>
    <string name="must_uninstall_to_update">You must uninstall first to update to the new version.</string>
    <string name="category_leaderboard">Leaderboard</string>
    <string name="category_network_usage">Network usage</string>
    <string name="category_display">Display</string>
    <string name="reset_simulation_start">Simulation start position has been reset</string>
    <string name="category_crashreport">Crash reporting</string>
    <string-array name="map_tile_resolution_options">
        <item>High (Wi-Fi) / low (cell)</item>
        <item>High detail only</item>
        <item>Low detail only</item>
        <item>No map</item>
    </string-array>
    <string name="low_battery_title">Stop stumbling on low battery</string>
    <string name="battery_percent_options_label">Stop when battery drops to:</string>
    <string name="motion_detection_title">Motion Detection</string>
    <string name="motion_detection_options_label">Pause scanning if you don\'t move</string>
    <string name="motion_detection_options_conjunction">in</string>
    <string name="motion_detection_minimum_pause_time">Minimum pause time:</string>
    <string name="power_saving_mode_summary">Pauses the scanning if you aren\'t moving, and starts it again if movement is detected.</string>
</resources>