<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences">
    <PreferenceCategory android:title="@string/category_leaderboard" >
    <EditTextPreference
        android:key="nickname"
        android:title="@string/enter_nickname"
        android:summary="@string/enter_nickname_longtext" />
    <EditTextPreference
        android:key="email"
        android:title="@string/enter_email"
        android:inputType="textEmailAddress"
        android:summary="@string/enter_email_longtext" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_power_saving" >

        <!-- friendly reminder: the android:key must match the name of the value in [Client]Prefs.java -->
        <ListPreference
            android:key="power_saving_mode_type"
            android:title="@string/power_saving_mode"
            android:entries="@array/power_saving_mode_options"
            android:entryValues="@array/power_saving_mode_options_intvalues"
            android:summary="@string/power_saving_mode_summary"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_network_usage" >

    <CheckBoxPreference
        android:key="wifi_only"
        android:title="@string/upload_wifi_only_title"
        android:summary="@string/upload_wifi_only_summary"
        android:defaultValue="true" />
    <ListPreference
        android:key="map_tile_res_options"
        android:title="@string/map_tile_resolution_options_label"
        android:entries="@array/map_tile_resolution_options"
        android:entryValues="@array/map_tile_resolution_options_intvalues"
        android:summary="@string/map_tile_resolution_options_summary"
        />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_display" >

    <CheckBoxPreference
        android:key="enable_the_option_to_show_mls_on_map"
        android:title="@string/enable_option_show_mls_on_map"
        android:summary="@string/enable_option_show_mls_on_map_summary"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="keep_screen_on"
        android:title="@string/keep_screen_on_title"
        android:summary="@string/keep_screen_on_summary"
        android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_crashreport" >
    <CheckBoxPreference
        android:key="crash_reporting"
        android:title="@string/enable_crash_reporting"
        android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="api_10_support">
    <Preference android:title="@string/view_leaderboard"
        android:key="leaderboard_button"/>
    </PreferenceCategory>

    <Preference android:title="@string/action_file_bug"
        android:key="file_bug"/>
    <Preference android:title="@string/action_view_log"
        android:key="log_button"/>
    <Preference android:title="@string/action_about"
        android:key="about_button"/>
    <Preference android:title="@string/action_developer"
        android:key="developer_button"/>
</PreferenceScreen>
