<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.mozilla.mozstumbler.client.subactivities.FirstRunFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout"
        android:paddingTop="16dp"

        >

    <TextView
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_run_message_part1"
        android:id="@+id/textview1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="18sp"

        />
        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_run_message_part2"
            android:id="@+id/textview2"
            android:layout_below="@+id/textview1"
            android:textSize="16sp"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview2"
            android:layout_alignRight="@+id/textview1"
            android:layout_alignEnd="@+id/textview1"
            android:text="@string/first_run_start_stumbling"
            android:layout_alignLeft="@+id/textview1"
            android:layout_alignStart="@+id/textview1"
            android:id="@+id/button"
             />

    </RelativeLayout>

</FrameLayout>
